--- a/todos/todo.org
+++ b/todos/todo.org
@@ -17,9 +17,15 @@
      :ARCHIVE_TIME: 2013-07-17 周三 17:38
      :END:
 * Mobi Platform							       :Mobi:
-** 新需求[1/1]
-*** 传给配送系统的配送任务应该增加一个店铺的地址列表
-    SCHEDULED: <2013-07-19 周五>
+** 项目开发过程
+*** TODO 解决开发分支、测试分支、生产分支的关系和开发过程	   :Delegate:
+**** 开发分支和测试分支目前暂合并为一个，直接在主干进行开发和测试，同时建立一个基于主干的持续集成服务器，平台开发和测试的runtime皆有该持续集成服务器生成。
+**** 生产运营系统打一个生成分支，该分支独立建立一个持续集成服务器，生成环境的系统的runtime通过该持续集成服务器集成。
+     1. [ ] 独立分支
+     2. [ ] 独立持续集成服务器
+     3. [ ] 每发布一个版本时更新持续集成服务器的源码地址
+** 新需求[1/2]
+*** TODO 完成移动版本和Web版本的点购后台服务的开发
 *** Archive							    :ARCHIVE:
 **** DONE [#C] 实现Pad应用程序后台静默升级[3/3]
      CLOSED: [2013-07-18 周四 16:11] SCHEDULED: <2013-07-15 周一>
@@ -30,7 +36,15 @@
      - [X] 技术准备，网上调研静默升级方案
      - [X] 验证技术方案
      - [X] 实现并进行测试 
+**** DONE 传给配送系统的配送任务应该增加一个店铺的地址列表
+     CLOSED: [2013-07-19 周五 10:43] SCHEDULED: <2013-07-19 周五>
+     - State "DONE"       from ""           [2013-07-19 周五 10:43]
+     :PROPERTIES:
+     :ARCHIVE_TIME: 2013-07-19 周五 10:43
+     :END:
 ** Bug修改[1/2]
+*** TODO 解决”买家停用后，PAD仍能登录并进入系统“的问题
+    SCHEDULED: <2013-07-19 周五>
 *** TODO [#C] mobi-platform-ba-monitor的依赖关系有问题[/]	   :Delegate:
     DEADLINE: <2013-07-19 周五>
     mobi-platform-ba-monitor不应该依赖bd-order、bd-model、order-monitor。
@@ -85,7 +99,7 @@
 *** 工作 确认Pad端新原型[2/3]
 **** 工作 绘制效果图[2/2]
 ***** TODO 检查张利巧绘制的新的点购效果图，并将这个效果图发给孙总和老戴查看
-      DEADLINE: <2013-07-19 周五 11:30>
+      DEADLINE: <2013-07-22 周一 11:30>
 ***** Archive							    :ARCHIVE:
 ****** DONE 绘制历史订单效果图[/]
        DEADLINE: <2013-07-12 周五 14:00>
