--- a/inbox/inbox-family.org
+++ b/inbox/inbox-family.org
@@ -2,3 +2,8 @@
 ** TODO 装修的时候要考虑无线路由器的安装位置问题，避免靠里面的两个房间没有信号 :Family:
    - [ ] 可以考虑在靠近公共卫生间的地方再预留一个可以安装无线路由器的地方，并且预留一个开关，可以通过开关来在需要时关闭该路由器
    - [ ] 在客厅也可以安装一个路由器，也可以通过开过来控制开关
+** TODO 鞋柜附近要准备开关，烘鞋器可以用				 :装修:
+
+** TODO 可以设置专门的洗衣台
+
+** TODO 卫生间要弄一个可以拔出来洗头用的龙头
